Revert "fix: align CityJSON texture logic with spec and reference"
This reverts commit 3314d2d6a44793a88edab28d7044ba81eb337a87.