@@ -1,17 +1,21 @@
 package app.bpartners.geojobs.service.cityjson.texture;
 
 import app.bpartners.geojobs.model.lidar.planes.algorithm.Vector3DUtils;
+import app.bpartners.geojobs.service.cityjson.model.BuildingData;
 import app.bpartners.geojobs.service.cityjson.texture.model.*;
+import app.bpartners.geojobs.service.lidar.model.geometry.GeometryWithProperties;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+
 import org.jetbrains.annotations.NotNull;
 import org.locationtech.jts.math.Vector3D;
 import org.springframework.stereotype.Service;
@@ -72,8 +76,7 @@ public class CityJsonTextureDomainService {
     return texture(cityJsonWithVertices, textureDataUri, rasterInfo);
   }
 
-  public TexturedCityJson texture(
-      CityJsonWithVertices cityJsonWithVerticesFile, TextureFile textureFile) {
+  public TexturedCityJson texture(CityJsonWithVertices cityJsonWithVerticesFile, TextureFile textureFile) {
     RasterInfo rasterInfo = textureFile.rasterInfo();
     String textureDataUri = textureFile.dataUri();
 
@@ -81,8 +84,7 @@ public class CityJsonTextureDomainService {
   }
 
   @NotNull
-  private TexturedCityJson texture(
-      CityJsonWithVertices cityJsonWithVertices, String textureDataUri, RasterInfo rasterInfo) {
+  private TexturedCityJson texture(CityJsonWithVertices cityJsonWithVertices, String textureDataUri, RasterInfo rasterInfo) {
     ObjectNode cityJson = cityJsonWithVertices.json().deepCopy();
     List<Vector3D> vertices = cityJsonWithVertices.vertices();
     ObjectNode appearance = initAppearance(textureDataUri);
@@ -105,21 +107,15 @@ public class CityJsonTextureDomainService {
       for (JsonNode geometryNode : geometries) {
         ObjectNode geometry = (ObjectNode) geometryNode;
 
-        initGeometryAppearance(geometry);
+        ObjectNode geometryAppearance = initGeometryAppearance();
+        geometry.set("appearance", geometryAppearance);
 
         List<JsonNode> faces = extractFaces(geometry);
 
         ArrayNode surfaces = getSemanticSurfaces(geometry);
-        JsonNode semanticValuesTree = getSemanticValues(geometry);
-        boolean hasSemantics = surfaces != null && semanticValuesTree != null;
+        boolean hasSemantics = surfaces != null && surfaces.size() == faces.size();
 
-        List<String> surfaceTypes =
-            resolveSurfaceTypes(
-                surfaces,
-                semanticValuesTree,
-                geometry.get("type").asText(),
-                faces.size(),
-                hasSemantics);
+        List<String> surfaceTypes = resolveSurfaceTypes(surfaces, faces.size(), hasSemantics);
 
         for (int i = 0; i < faces.size(); i++) {
           processFace(
@@ -130,7 +126,7 @@ public class CityJsonTextureDomainService {
               rasterInfo,
               vertexTexture,
               vertexTextureMap,
-              geometry);
+              geometryAppearance);
         }
       }
     }
@@ -170,7 +166,7 @@ public class CityJsonTextureDomainService {
     List<Integer> vtIndices = new ArrayList<>();
 
     for (UV coordinate : uv) {
-      String key = String.format(Locale.ROOT, "%.6f,%.6f", coordinate.u(), coordinate.v());
+      String key = "%.6f,%.6f".formatted(coordinate.u(), coordinate.v());
 
       Integer existingIndex = vertexTextureMap.get(key);
 
@@ -221,7 +217,9 @@ public class CityJsonTextureDomainService {
     return appearance;
   }
 
-  public void initGeometryAppearance(ObjectNode geometry) {
+  public ObjectNode initGeometryAppearance() {
+    ObjectNode geometryAppearance = objectMapper.createObjectNode();
+
     ObjectNode texture = objectMapper.createObjectNode();
     ObjectNode textureDefault = objectMapper.createObjectNode();
     textureDefault.set("values", objectMapper.createArrayNode());
@@ -232,8 +230,10 @@ public class CityJsonTextureDomainService {
     materialDefault.set("values", objectMapper.createArrayNode());
     material.set("default", materialDefault);
 
-    geometry.set("texture", texture);
-    geometry.set("material", material);
+    geometryAppearance.set("texture", texture);
+    geometryAppearance.set("material", material);
+
+    return geometryAppearance;
   }
 
   public void processFace(
@@ -244,48 +244,41 @@ public class CityJsonTextureDomainService {
       RasterInfo rasterInfo,
       List<UV> vertexTexture,
       Map<String, Integer> vertexTextureMap,
-      ObjectNode geometry) {
+      ObjectNode geometryAppearance) {
+    List<Vector3D> coords = getFaceCoords(face, vertices);
 
-    ArrayNode textureValues = (ArrayNode) geometry.get("texture").get("default").get("values");
-    ArrayNode materialValues = (ArrayNode) geometry.get("material").get("default").get("values");
-
-    List<Vector3D> outerRingCoords = getRingCoords(face.get(0), vertices);
-    if (outerRingCoords.size() < 3) {
-      textureValues.addNull();
-      if (hasSemantics) {
-        materialValues.addNull();
-      } else {
-        materialValues.add(1);
-      }
+    if (coords.size() < 3) {
       return;
     }
 
-    boolean roof = hasSemantics ? isRoofSemantic(faceType) : isRoof(outerRingCoords);
+    List<UV> uv = computeUv(coords, rasterInfo);
+
+    List<Integer> vtIndices = deduplicateUvs(uv, vertexTexture, vertexTextureMap);
+
+    boolean roof = hasSemantics ? isRoofSemantic(faceType) : isRoof(coords);
+
+    ArrayNode textureValues =
+        (ArrayNode) geometryAppearance.get("texture").get("default").get("values");
+
+    ArrayNode materialValues =
+        (ArrayNode) geometryAppearance.get("material").get("default").get("values");
 
     if (roof) {
-      ArrayNode faceTextureIndices = objectMapper.createArrayNode();
+      ArrayNode ringTextureIndices = objectMapper.createArrayNode();
 
-      for (JsonNode ring : face) {
-        List<Vector3D> ringCoords = getRingCoords(ring, vertices);
-        List<UV> uv = computeUv(ringCoords, rasterInfo);
-        List<Integer> vtIndices = deduplicateUvs(uv, vertexTexture, vertexTextureMap);
-
-        ArrayNode ringTextureIndices = objectMapper.createArrayNode();
-        ringTextureIndices.add(0); // Texture index
-        for (Integer index : vtIndices) {
-          ringTextureIndices.add(index);
-        }
-        faceTextureIndices.add(ringTextureIndices);
+      for (Integer index : vtIndices) {
+        ringTextureIndices.add(index);
       }
+
+      ArrayNode faceTextureIndices = objectMapper.createArrayNode();
+      faceTextureIndices.add(ringTextureIndices);
 
       textureValues.add(faceTextureIndices);
       materialValues.add(0);
     } else {
       textureValues.addNull();
 
-      if (hasSemantics) {
-        materialValues.addNull();
-      } else {
+      if (!hasSemantics) {
         materialValues.add(1);
       }
     }
@@ -312,10 +305,12 @@ public class CityJsonTextureDomainService {
     return faces;
   }
 
-  public List<Vector3D> getRingCoords(JsonNode ring, List<Vector3D> vertices) {
+  public List<Vector3D> getFaceCoords(JsonNode face, List<Vector3D> vertices) {
+    JsonNode outerRing = face.get(0);
+
     List<Vector3D> coords = new ArrayList<>();
 
-    for (JsonNode vertexIndexNode : ring) {
+    for (JsonNode vertexIndexNode : outerRing) {
       int vertexIndex = vertexIndexNode.asInt();
       coords.add(vertices.get(vertexIndex));
     }
@@ -359,40 +354,14 @@ public class CityJsonTextureDomainService {
     return (ArrayNode) semantics.get("surfaces");
   }
 
-  public JsonNode getSemanticValues(ObjectNode geometry) {
-    if (!geometry.has("semantics")) {
-      return null;
-    }
-
-    JsonNode semantics = geometry.get("semantics");
-
-    if (!semantics.has("values")) {
-      return null;
-    }
-
-    return semantics.get("values");
-  }
-
-  public List<String> resolveSurfaceTypes(
-      ArrayNode surfaces,
-      JsonNode semanticValuesTree,
-      String geometryType,
-      int faceCount,
-      boolean hasSemantics) {
+  public List<String> resolveSurfaceTypes(ArrayNode surfaces, int faceCount, boolean hasSemantics) {
     List<String> surfaceTypes = new ArrayList<>();
 
     if (hasSemantics) {
-      List<JsonNode> flattenedValues = flattenSemanticValues(semanticValuesTree, geometryType);
-      for (int i = 0; i < faceCount; i++) {
-        JsonNode valueNode = i < flattenedValues.size() ? flattenedValues.get(i) : null;
-        if (valueNode == null || valueNode.isNull()) {
-          surfaceTypes.add(null);
-        } else {
-          int surfaceIndex = valueNode.asInt();
-          JsonNode surface = surfaces.get(surfaceIndex);
-          String type = surface.has("type") ? surface.get("type").asText() : "WallSurface";
-          surfaceTypes.add(type);
-        }
+      for (JsonNode surface : surfaces) {
+        String type = surface.has("type") ? surface.get("type").asText() : "WallSurface";
+
+        surfaceTypes.add(type);
       }
     } else {
       for (int i = 0; i < faceCount; i++) {
@@ -401,22 +370,6 @@ public class CityJsonTextureDomainService {
     }
 
     return surfaceTypes;
-  }
-
-  private List<JsonNode> flattenSemanticValues(JsonNode values, String type) {
-    List<JsonNode> result = new ArrayList<>();
-    if ("Solid".equals(type)) {
-      for (JsonNode shell : values) {
-        for (JsonNode val : shell) {
-          result.add(val);
-        }
-      }
-    } else {
-      for (JsonNode val : values) {
-        result.add(val);
-      }
-    }
-    return result;
   }
 
   public RowCol rowColAffine(RasterInfo t, double x, double y) {
